color scheme, layout, media-query updates.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="img/AD RICH.png" alt="Logo">
+            <img src="img/AD RICH (1).png" alt="Logo">
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
@@ -36,33 +36,53 @@
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Adam Rich</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">web developer</p>
-        <img src="img/prof1.JPEG" alt"headshot" class="intro__img">
+        <p class="section__subtitle section__subtitle--intro">web developer & musician</p>
+        <img src="img/pexels-trace-constant-2834009.jpg" alt"headshot" class="intro__img">
     </section>
 
-    <!-- My Services -->
-    <section class="my-languages" id="languages">
-        <h2 class="section__title section__title--languages">What I do</h2>
-        <div class="languages">
-            <div class="language">
+    <!-- My Tools -->
+    <section class="my-tools" id="tools">
+        <h2 class="section__title section__title--tools">What I Use</h2>
+        <div class="tool__section">
+            <div class="tool">
                 <h3>HTML</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo dolores unde expedita quos iusto amet tempora quae, mollitia minima quas.</p>
-            </div> <!-- / language -->
+                <img class="tool__img" src='/img/tools/html5-brands.svg'></img>
+            </div> <!-- / tool -->
 
-            <div class="language">
+            <div class="tool">
                 <h3>CSS</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam vel iusto ipsam accusantium odit repellat! At nesciunt repellat id libero!</p>
-            </div> <!-- / language -->
+                <img class="tool__img" src='/img/tools/css3-brands.svg'></img>
+            </div> <!-- / tool -->
 
-            <div class="language">
+            <div class="tool">
                 <h3>Javascript</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum aut ipsa aspernatur officia molestiae sed earum non id doloremque hic!</p>
-            </div> <!-- / language -->
+                <img class="tool__img" src='/img/tools/js-square-brands.svg'></img>
+            </div> <!-- / tool -->
 
-            <div class="language">
+            <div class="tool">
                 <h3>Python</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum aut ipsa aspernatur officia molestiae sed earum non id doloremque hic!</p>
-            </div> <!-- / language -->
+                <img class="tool__img" src='/img/tools/python-brands.svg'></img>
+            </div> <!-- / tool -->
+
+            <div class="tool">
+                <h3>Flask</h3>
+                <img class="tool__img" src='/img/tools/flask.png'></img>
+            </div> <!-- / tool -->
+
+            <div class="tool">
+                <h3>Chrome</h3>
+                <img class="tool__img" src='/img/tools/chrome-brands.svg'></img>
+            </div> <!-- / tool -->
+
+            <div class="tool">
+                <h3>GitHub</h3>
+                <img class="tool__img" src='/img/tools/github-brands.svg'></img>
+            </div> <!-- / tool -->
+
+            <div class="tool">
+                <h3>Finale</h3>
+                <img class="tool__img" id='finale' src='/img/tools/finale.png'></img>
+            </div> <!-- / tool -->
         </div>
 
         <a href="#mywork" class="btn" id="my_work--btn">My Work</a>
@@ -72,7 +92,7 @@
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
         <p class="section__subtitle section__subtitle--about">Designer & developer from FL</p>
-        <img src="img/bri.jpeg" alt="" class="about__img"  id="about__img" =changeFoto(this)>
+        <img src="img/family/bri.jpeg" alt="" class="about__img"  id="about__img" =changeFoto(this)>
         <div class="about-me__body">
             <p>I am a lifetime learner! I enjoy picking up new skills and reading interesting articles. Music is another strong passion of mine. I play the trumpet and the piano, as well as write and arrange music!</p>
             <p>When I'm not working or performing, you can find me at home or travelling with my wife (Bri)and two boys (Brayden & Avery). We love to travel and finding fun local weekend activities.</p>
@@ -88,29 +108,29 @@
         <div class="portfolio">
             <!-- Portfolio item 01 -->
             <a href="portfolio-item.html" class="portfolio__item">
-                <img src="img/port1.jpg" alt="" class="portfolio__img">
+                <img src="img/portfolio/port1.jpg" alt="" class="portfolio__img">
             </a>
 
             <!-- Portfolio item 02 -->
             <a href="#" class="portfolio__item">
-                <img src="img/port3.jpg" alt="" class="portfolio__img">
+                <img src="img/portfolio/port2.jpg" alt="" class="portfolio__img">
             </a>
 
             <!-- Portfolio item 03 -->
             <a href="#" class="portfolio__item">
-                <img src="img/port4.jpg" alt="" class="portfolio__img">
+                <img src="img/portfolio/port3.jpg" alt="" class="portfolio__img">
             </a>
 
             <!-- Portfolio item 04 -->
             <a href="#" class="portfolio__item">
-                <img src="img/port5.jpg" alt="" class="portfolio__img">
+                <img src="img/portfolio/port4.jpg" alt="" class="portfolio__img">
             </a>
         </div>
     </section>
 
     <!-- Footer -->
     <footer class="footer">
-        <a href="mailto:AdRICHcodes@gmail.com" class="footer__link">AdRICHcodes@gmail.com</a>
+        <a href="mailto:AdRICHcodes@gmail.com" class="footer__link">adrichcodes@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item"><a class="social-list__link"></a><i class="fa-brands fa-twitter-square"></i></i></li>
             <li class="social-list__item"><a class="social-list__link"></a><i class="fa-brands fa-facebook-square"></i></li>
