Major updates/fixes. Added projects w/ prev pages.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Adam Rich</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">web developer & musician</p>
+        <p class="section__subtitle section__subtitle--intro">web developer</p>
         <img src="img/pexels-trace-constant-2834009.jpg" alt"headshot" class="intro__img">
     </section>
 
@@ -107,30 +107,33 @@
 
         <div class="portfolio">
             <!-- Portfolio item 01 -->
-            <a href="portfolio-item.html" class="portfolio__item">
-                <img src="img/portfolio/port1.jpg" alt="" class="portfolio__img">
+            <a href="ninjas_vs_pirates.html" class="portfolio__item">
+                <h3 class="port_item_text">Ninja's vs Pirates</h3>
+                <img src="img/portfolio/port1.jpeg" alt="" class="portfolio__img">
             </a>
 
             <!-- Portfolio item 02 -->
-            <a href="#" class="portfolio__item">
-                <img src="img/portfolio/port2.jpg" alt="" class="portfolio__img">
+            <a href="great_number_game.html" class="portfolio__item">
+                <h3 class="port_item_text">Great Number Game</h3>
+                <img src="img/portfolio/port2.jpeg" alt="" class="portfolio__img">
             </a>
 
             <!-- Portfolio item 03 -->
             <a href="#" class="portfolio__item">
-                <img src="img/portfolio/port3.jpg" alt="" class="portfolio__img">
+                <h3 class="port_item_text">Recipes</h3>
+                <img src="img/portfolio/port3.jpeg" alt="" class="portfolio__img">
             </a>
 
             <!-- Portfolio item 04 -->
             <a href="#" class="portfolio__item">
-                <img src="img/portfolio/port4.jpg" alt="" class="portfolio__img">
+                <img src="img/portfolio/coming_soon.jpeg" alt="" class="portfolio__img">
             </a>
         </div>
     </section>
 
     <!-- Footer -->
     <footer class="footer">
-        <a href="mailto:AdRICHcodes@gmail.com" class="footer__link">adrichcodes@gmail.com</a>
+        <a href="mailto:adrichcodes@gmail.com" class="footer__link">adrichcodes@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item"><a class="social-list__link"></a><i class="fa-brands fa-twitter-square"></i></i></li>
             <li class="social-list__item"><a class="social-list__link"></a><i class="fa-brands fa-facebook-square"></i></li>
