more updates/fixes

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
     <!-- My Work -->
     <section class="my-work" id="mywork">
+        <a href="https://drive.google.com/file/d/1WpEwCyke-KF4DtZ5t9OYDud6vSLeEw-j/view?usp=sharing" class="btn" id="my_work--btn">RESUME</a>
         <h2 class="section__title section__title--mywork">My work</h2>
         <p class="section__subtitle section__subtitle--mywork">Some of my best projects</p>
 
@@ -119,7 +120,7 @@
             </a>
 
             <!-- Portfolio item 03 -->
-            <a href="#" class="portfolio__item">
+            <a href="recipes.html" class="portfolio__item">
                 <h3 class="port_item_text">Recipes</h3>
                 <img src="img/portfolio/port3.jpeg" alt="" class="portfolio__img">
             </a>
