--- a/great_number_game.html
+++ b/great_number_game.html
@@ -42,7 +42,7 @@
 
     <div class="portfolio-item-individual">
         <p>This is my first Flask build. It makes use of Pythons random module to choose a number to be guessed by the user. As of right now, the leaderboard is only stored in 'cookies', but I will soon update it to be stored in a database.</p>
-        <video id='nvp_gameplay' class='video_prev' autoplay>
+        <video id='nvp_gameplay' class='video_prev' autoplay playsinline>
             <source src="img/Great_Num_Game/gn_gameplay.mov" type="video/mp4">
         </video>
         <p>Check out the code for this game (and download to play!) on <a href="git@github.com:AdamWRich/The-Great-Number-Game.git">GitHub!</a></p>
