--- a/ninjas_vs_pirates.html
+++ b/ninjas_vs_pirates.html
@@ -42,7 +42,7 @@
 
     <div class="portfolio-item-individual">
         <p>This mini-project is one that really got me excited about the backend of programming, specifically using Python! This was a 'hack-a-thon' assignment from Coding Dojo. I would like to eventually add a front end and make this a bit more functional.</p>
-        <video id='nvp_gameplay' class='video_prev' autoplay>
+        <video id='nvp_gameplay' class='video_prev' autoplay playsinline>
             <source src="img/Ninjas_vs_pirates/n_vs_p_gameplay.mp4" type="video/mp4">
         </video>
         <p>Check out the code for this game (and download to play!) on <a href="https://github.com/AdamWRich/ninjas_vs_pirates.git">GitHub!</a></p>
