--- a/recipes.html
+++ b/recipes.html
@@ -42,7 +42,7 @@
 
     <div class="portfolio-item-individual">
         <p>One of my more complex builds, this was an assignment focues on full-fledged Flask capability with connection to a MySQL database. Users can register and log in (with form validations) as well as create (post) recipes and view ones made by others. Users can also edit and delete their own recipes.</p>
-        <video id='nvp_gameplay' class='video_prev' autoplay>
+        <video id='nvp_gameplay' class='video_prev' autoplay playsinline>
             <source src="img/recipes/recipes_gameplay.mp4" type="video/mp4">
         </video>
         <p>This was a really fun project, and got me more interested in how backend code can change front end templates! Check out the code for this project on <a href="git@github.com:AdamWRich/The-Great-Number-Game.git">GitHub!</a></p>
