profile picture added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             Hi, I am <strong>Adam Rich</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">web developer</p>
-        <img src="img/pexels-trace-constant-2834009.jpg" alt"headshot" class="intro__img">
+        <img src="img/profile.png" alt"headshot" class="intro__img">
     </section>
 
     <!-- My Tools -->
