--- a/ninjas_vs_pirates.html
+++ b/ninjas_vs_pirates.html
@@ -37,7 +37,7 @@
             Ninjas vs <strong>Pirates</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">a terminal game</p>
-        <img src="img/Ninjas_vs_pirates/ninjas_vs_pirates_header.png" alt"header-image" class="intro__img portfolio__header-img">
+        <img id="nvp_header" src="img/Ninjas_vs_pirates/ninjas_vs_pirates_header.png" alt"header-image" class="intro__img portfolio__header-img">
     </section>
 
     <div class="portfolio-item-individual">
